bump version, rename safewalk and refactor